<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#322"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/main_left_menu_btn_profile"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/question"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="Name"
                        android:ems="10"
                        android:id="@+id/main_left_menu_txt_name" />

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:text=""
                        android:id="@+id/main_left_menu_btn_name"
                        android:background="@drawable/glyphicons_030_pencil"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    >

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/main_left_menu_btn_badge1"
                        android:layout_margin="5dp"
                        android:background="@drawable/glyphicons_432_plus" />

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/main_left_menu_btn_badge2"
                        android:layout_margin="5dp"
                        android:background="@drawable/glyphicons_432_plus"/>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/main_left_menu_btn_badge3"
                        android:layout_margin="5dp"
                        android:background="@drawable/glyphicons_432_plus"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/main_left_menu_btn_cnt_bucket"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/glyphicons_194_circle_question_mark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_left_menu_txt_bucket"
                        android:id="@+id/main_left_menu_txt_bucket"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/main_left_menu_btn_cnt_friends"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/glyphicons_194_circle_question_mark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_left_menu_txt_friends"
                        android:id="@+id/main_left_menu_txt_friends"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/main_left_menu_btn_cnt_badge"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/glyphicons_194_circle_question_mark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_left_menu_txt_badge"
                        android:id="@+id/main_left_menu_txt_badge"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_left_menu_setting"
                    android:id="@+id/main_left_menu_btn_setting" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_left_menu_notice"
                    android:id="@+id/main_left_menu_btn_notice" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_left_menu_update"
                    android:id="@+id/main_left_menu_btn_update" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_left_menu_logout"
                    android:id="@+id/main_left_menu_btn_logout" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>